Cleaned up UI alignment a little, removed some borders until I figure out how to display them all correctly

--- a/src/components/Grid/Clue/Clue.module.css
+++ b/src/components/Grid/Clue/Clue.module.css
@@ -1,6 +1,5 @@
 .Clue {
   width: 100%;
-  border: 1px solid black;
   text-align: center;
   display: inline-block;
   background-color: burlywood;
