--- a/src/components/Keyboard/Keyboard.css
+++ b/src/components/Keyboard/Keyboard.css
@@ -1,7 +1,7 @@
 .simple-keyboard.hg-theme-default.myTheme {
   border-radius: 0%;
   padding: 5px;
-  width: calc(100%);
+  width: 100%;
 }
 
 .simple-keyboard .hg-row {
