--- a/src/containers/Grid/Grid.module.css
+++ b/src/containers/Grid/Grid.module.css
@@ -1,6 +1,10 @@
-.Grid {
-  border: 1px solid black;
+.Content {
   width: 375px;
   height: 375px;
   margin: 0 auto;
+}
+
+.Grid {
+  width: 100%;
+  height: 100%;
 }
